--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image_picker: ^0.8.5+3
   pdf: ^3.8.1
   path_provider: ^2.0.11
+  bottom_bar: ^2.0.1
 
 dev_dependencies:
   flutter_test:
